2009-05-28  Xavier Maillard  <xma@gnu.org>

	* records-autoloads.el, records-dindex.el, records-index.el,
	records-load.el, records-search.el, records-tex.el,
	records-util.el, records.el.in: update header (licensing).

	* new maintainer (Xavier Maillard)

2003-05-20  David Masterson  <dsm@rawbw.com>

	* Makefile.am (MAILCRYPT): added mailcrypt to distribution (again)

2003-05-19  David Masterson  <dsm@rawbw.com>

	* configure.ac: changing name back to 'records' from 'records.el'
	to keep in the spirit of the storage on SourceForge.

2003-03-04  David Masterson  <dsm@rawbw.com>

	* records.texi: Removed extra space from Info menu entry
	information.

2003-02-25  David Masterson  <dsm@rawbw.com>

	* Makefile.am: adding comments to explain things

	* records.texi (Top): added a statement on the VERSION of
	records-mode that the documentation applies to for the Info
	version of the documentation.

2003-02-24  David Masterson  <dsm@rawbw.com>

	* FAQ (use): added info. on maintenance.

	* README: mentioned INSTALL-UNIX and reformatted to standard text
	file fill-column size (always fill-paragraph on text files).

	* recordsadmin.in: changing srcdirpath to lispdir as that is where
	the lisp will be installed.

	* records-vars.el.in: moved records-var.el to be a configure file
	so that it will know where records-templ.tex was installed.  Maybe
	it should be configurable?

2003-02-22  David Masterson  <dsm@rawbw.com>

	* records-vars.el: changing some defvars to defcustom and adding
	expand-file-name to all file/directory name variables.

2003-02-21  David Masterson  <dsm@rawbw.com>

	* records-vars.el: adding a defgroup for records and putting the
	group in packages.

	* records.el.in: changing version to @VERSION@ and moving this
	file to records.el.in to work with autoconf.

2003-02-20  David Masterson  <dsm@rawbw.com>

	* Converting to automake/autoconf and using ChangeLog from now
	on.  This file is updated with add-change-log-entry.

================

Version 1.4.9