@@ -22,6 +22,7 @@ MAILCRYPT =					\
 
 # list of Lisp files to be installed in lispdir
 lisp_LISP =					\
+	$(MAILCRYPT)				\
 	records-autoloads.el			\
 	records-dindex.el			\
 	records-index.el			\
@@ -32,7 +33,7 @@ lisp_LISP =					\
 	records.el
 
 # list of Lisp files that will not be installed
-noinst_LISP = records-load.el
+noinst_LISP = records-load.el $(MAILCRYPT)
 
 # need to explicitly set this so records-load is not byte-compiled
 ELCFILES =					\
@@ -94,13 +95,6 @@ MAINTAINERCLEANFILES =				\
 	records.info				\
 	aclocal.m4				\
 	configure
-
-# how to byte-compile the elisp files
-PRELOADS = -l records-load.el -l records-vars.el -l records.el
-EFLAGS = -batch -q -no-site-file $(PRELOADS)
-
-.el.elc:
-	$(EMACS) $(EFLAGS) -f batch-byte-compile $<
 
 records-vars.el: records-vars.el.in
 	rm -f $@
